[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schaeffler2025"
version = "0.1.0"
description = "Gepetto tutorials, for Pinocchio and Crocoddyl, version for Supaero 2025 class"
readme = "README.md"
authors = [
  { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr"},
  { name = "Nicolas Mansard", email = "nmansard@laas.fr"},
  { name = "Théo Martinez", email = "tmartinezf@laas.fr"}
]
requires-python = ">=3.10"
dependencies = [
    "crocoddyl>=2.2.0",
    "gepetuto>=1.3.0",
    "gymnasium>=1.1.1",
    "ipycanvas>=0.13.3",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "meshcat>=0.3.2",
    "mim-solvers>=0.0.5",
    "proxsuite>=0.7.1, != 0.7.2.post1",
    "scipy>=1.15.0",
    "stable-baselines3[extra]>=2.6.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.isort]
profile = "black"
